--- a/src/index.css
+++ b/src/index.css
@@ -68,7 +68,7 @@ code {
 }
 
 .nav{
-  background-color: white;
+  background-color: rgb(224, 224, 224);
   text-align: right;
   padding-right: 2%;
   padding-top: 1%;
@@ -78,4 +78,11 @@ code {
 .contentDiv{
   margin-left: 3%;
   margin-right: 3%;
+}
+
+.span{
+  margin-right: 2%;
+  margin-left: 1%;
+  font-size: x-large;
+  color: rgb(6, 6, 139);
 }
